--- a/doc/ratpoison.texi
+++ b/doc/ratpoison.texi
@@ -313,15 +313,21 @@ Display the last message.
 @item C-t C-v
 Display the version of ratpoison.
 
+@item C-t V
+@item C-t C-V
+Display ratpoison's license.
+
 @item C-t w
 @item C-t C-w
 Display the list of managed windows. The current window is highlighted.
 
 @item C-t s
+@item C-t C-s
 Split the current window horizontally in two. The last accessed window
 not occupying a frame will be the second window.
 
 @item C-t S
+@item C-t C-S
 Split the current window vertically in two. The last accessed window not
 occupying a frame will be the second window.
 
@@ -342,7 +348,7 @@ Kill the current frame. This is a no-op if there is only one frame.
 Banish the mouse to the lower right corner of the screen.
 
 @item C-t ?
-Display a help screen
+Display a help screen.
 
 @item C-t f
 @item C-t C-f
@@ -399,6 +405,9 @@ Run a ratpoison command.
 @item curframe
 Indicate which frame is the current frame.
 
+@item defbarborder @var{n}
+Set the border width for the bar window.
+
 @item defbargravity @var{g}
 Set the default alignment for the message bar. See the @command{gravity} command.
 
@@ -410,9 +419,6 @@ Set the horizontal and vertical padding inside the bar.
 
 When called non-interactively with no arguments, the current setting is
 returned.
-
-@item defbarborder @var{n}
-Set the border width for the bar window.
 
 @item defbgcolor @var{color}
 Set the background color for all text ratpoison displays. @var{color}
@@ -491,19 +497,19 @@ the number, the more recently it was accessed.
 When called non-interactively with no arguments, the current setting is
 returned.
 
+@item defwingravity @var{g}
+Set the default gravity for normal windows. See the
+@command{gravity} command.
+
+When called non-interactively with no arguments, the current setting is
+returned.
+
 @item defwinname @var{name}
 There are three resources ratpoison can get a window's name from: the
 WMNAME hint, the res_name from the WMCLASS hint, or the res_class from
 the WMCLASS hint. @var{name} can be @samp{title} which is what most
 window managers put in the title bar, @samp{name} which is the
 res_name, or @samp{class} which is the res_class.
-
-When called non-interactively with no arguments, the current setting is
-returned.
-
-@item defwingravity @var{g}
-Set the default gravity for normal windows. See the
-@command{gravity} command.
 
 When called non-interactively with no arguments, the current setting is
 returned.
@@ -525,20 +531,23 @@ Execute a shell command. By default, @kbd{C-t !} does this.
 @item focus
 cycle through ratpoison's frames.
 
-@item focuslast
-Switch to the last focused frame.
-
-@item focusup
-Move to the frame above the current frame.
-
 @item focusdown
 Move to the frame below the current frame.
+
+@item focuslast
+Switch to the last focused frame.
 
 @item focusleft
 Move to the frame left of the current frame.
 
 @item focusright
 Move to the frame right of the current frame.
+
+@item focusup
+Move to the frame above the current frame.
+
+@item getenv @var{env}
+Display the value of the environment variable, @var{env}.
 
 @item gravity @var{g}
 Change the gravity of the current window. A normal window will default
@@ -550,6 +559,9 @@ directions @samp{northwest}, @samp{north}, @samp{northeast},
 center the window in the frame. @var{g} and can be abbreviated to the
 standard compass 1 and 2 letter abbreviations (i.e. @samp{nw},
 @samp{s}, etc).
+
+When called non-interactively with no arguments, the current setting is
+returned.
 
 @item help
 Display a help screen that lists all bound keystrokes.
@@ -566,6 +578,9 @@ misbehaving window this command should do the trick. Also available as
 @item lastmsg
 Display the last message.
 
+@item license
+Display ratpoison's license. By default, this is bound to @kbd{C-t V}.
+
 @item link @var{key}
 Call the command that @var{key} is bound to. For instance
 @command{link C-t} would call the command @command{other} and switch
@@ -580,6 +595,10 @@ Set the bar's timeout in seconds.
 When called non-interactively with no arguments, the current setting is
 returned.
 
+@item newwm @var{window-manager}
+This is a bad-bad command. It kills ratpoison and revives that
+ugly rodent! Yuck! Avoid!
+
 @item next
 This jumps you to the next window in the window list. This one is
 bound to three keystrokes, namely @kbd{C-t n}, @kbd{C-t space},
@@ -588,10 +607,6 @@ and @kbd{C-t enter}.
 @item nextscreen
 This jumps you to the next X11 screen. @command{nextscreen} is
 used for dual-head displays and multiple monitor setups.
-
-@item newwm @var{window-manager}
-This is a bad-bad command. It kills ratpoison and revives that
-ugly rodent! Yuck! Avoid!
 
 @item number @var{n} @var{target}
 Set a window's number to @var{n}. If another window occupies the
@@ -664,6 +679,9 @@ raise requests and display requests you would type @samp{rudeness
 request with a message like @samp{Raise request from window 1
 (emacs)}.
 
+When called non-interactively with no arguments, the current setting is
+returned.
+
 @item select @var{n}
 This jumps you to window @var{n} where @var{n} is the window number as
 shown in the Program Bar. You can do the same trick with
@@ -699,6 +717,9 @@ shrink by that many pixels.
 Turn on or off the startup_message. This is most useful in your
 .ratpoisonrc file. @var{state} can be @code{on} or @code{off}.
 
+When called non-interactively with no arguments, the current setting is
+returned.
+
 @item time
 Show current time. Disappears after 5 seconds, like all other info bars.
 In the default setup, the @kbd{C-t a} keystroke is bound to this command.
@@ -707,6 +728,9 @@ In the default setup, the @kbd{C-t a} keystroke is bound to this command.
 Rename the currently active window. This name will remain for the
 duration of the window's life, unless you change it again. By default,
 the @kbd{C-t A} keystroke is bound to this command.
+
+@item unalias @var{name}
+Remove @var{name} from the list of defined aliases.
 
 @item unbind @var{key}
 Unbind a keystroke.
@@ -731,6 +755,12 @@ the original frame.
 If it is a pixel, the original frame is resized to that many
 pixels. If @var{n} has a minus sign before it, then the new frame will
 shrink by that many pixels.
+
+@item warp @var{state}
+Toggle rat warping. By default ratpoison saves the position of the
+rat when leaving a window and when the user returns to the window the
+rat's position is restored. This can be counter-intuitive, so you can
+toggle it with this command. @var{state} can be @code{on} or @code{off}.
 
 @item windows @var{fmt}
 This displays the Program Bar which displays the windows you currently
