--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
 * Changes since 1.1.1
+** error and debug reporting
+The format has been changed to the more standard format used by C
+compilers.
+
 ** New commands 'resize', 'shrink'
 resize resizes a frame and shrink shrinks a frame to the size of the
 window in it.
