--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
 * Changes since 1.1.1
+** keybinding changes
+fselect is bound to C-t C-f and C-t f, curframe is now bound to C-t F,
+and resize is bound to C-t C-r and C-t r.
+
 ** new command fselect
 select a frame by its number.
 
