--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-03-17  Shawn Betts  <sabetts@sfu.ca>
 
+	* src/split.c (resize_frame_horizontally): only resize to the left
+	if the frame isn't against the left side of the screen.
+	(resize_frame_vertically): only resize to the left
+	if the frame isn't against the top of the screen.
+
 	* src/actions.c (initialize_default_keybindings): add keybindings
 	for fselect and resize. Move keybinding for curframe.
 
