--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-23  Shawn Betts  <sabetts@sfu.ca>
+
+	* src/split.c (resize_frame_vertically): fix typo error (frame_top
+	not frame_left).
+
 2003-03-17  Shawn Betts  <sabetts@sfu.ca>
 
 	* src/split.c (resize_frame_horizontally): only resize to the left
